Fix: remove repetitive usage of 'Stream.collect(Collectors.toList())'