@@ -1,6 +1,5 @@
 package br.com.AllTallent.service;
 
-import java.util.stream.Collectors;
 import java.util.List;
 import br.com.AllTallent.dto.*;
 import br.com.AllTallent.exception.ResourceNotFoundException;
@@ -137,7 +136,7 @@ public class AvaliacaoService {
                 .filter(aval -> aval.getCriador().getArea() != null &&
                                 Objects.equals(aval.getCriador().getArea().getCodigo(), usuarioLogado.getAreaId()))
                 .map(AvaliacaoResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
         }
 
         // Regra do Perfil 2 (Supervisor)
@@ -151,7 +150,7 @@ public class AvaliacaoService {
                 // 3. Filtra para ver APENAS as que ele mesmo criou
                 .filter(aval -> Objects.equals(aval.getCriador().getCodigo(), usuarioLogado.getCodigo()))
                 .map(AvaliacaoResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
         }
 
         // Se não for nenhum dos dois (ex: USER), retorna lista vazia
@@ -187,7 +186,7 @@ public class AvaliacaoService {
 
         return avaliacaoFuncionarioRepository.findByAvaliacaoCodigo(avaliacaoId).stream()
                .map(AvaliacaoFuncionarioResponseDTO::new)
-               .collect(Collectors.toList());
+               .toList();
     }
 
     // --- MÉTODO ATUALIZADO ---
@@ -202,7 +201,7 @@ public class AvaliacaoService {
 
         return respostaColaboradorRepository.findByAvaliacaoFuncionarioCodigo(instanciaId).stream()
                .map(RespostaColaboradorResponseDTO::new)
-               .collect(Collectors.toList());
+               .toList();
     }
 
 
@@ -323,7 +322,7 @@ public class AvaliacaoService {
         return avaliacaoFuncionarioRepository.findByFuncionarioCodigo(funcionarioId).stream()
                .filter(af -> "PENDENTE".equals(af.getResultadoStatus()))
                .map(AvaliacaoFuncionarioResponseDTO::new)
-               .collect(Collectors.toList());
+               .toList();
     }
 
      @Transactional(readOnly = true)
@@ -364,11 +363,11 @@ public class AvaliacaoService {
 
             return RevisaoDetalhadaDTO.builder()
                 .perguntaId(resp.getPergunta().getCodigo())
-                .perguntaTexto(resp.getPergunta().getPergunta())
+                .perguntaTexto(resp.getPergunta().getEnunciado())
                 .respostaDada(resp.getRespostaTexto())
                 .opcaoSelecionadaId(idOpcao) // Usa a variável que calculamos acima
                 .build();
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
 
